@@ -1,18 +1,21 @@
-
-<HTML>
-<HEAD>
-<TITLE>Linux-PAM - Pluggable Authentication Modules for Linux</TITLE>
-</HEAD>
-<BODY>
-
-<p>
-Here is the documentation for Linux-PAM. As you will see it is
-currently not complete. However, in order of decreasing length:
-
-<ul>
-<li> <a href="Linux-PAM_SAG.html">The System Administrators' Guide</a>
-<li> <a href="Linux-PAM_MWG.html">The Module Writers' Guide</a>
-<li> <a href="Linux-PAM_ADG.html">The Application developers' Guide</a>
-</ul>
-
-</BODY>
+<html>
+  <head>
+    <title>The Linux-PAM Administration and Developer Guides</title>
+  </head>
+  <body>
+    <center>
+      <h1>The Linux-PAM Guides</h1>
+    </center>
+    <hr>
+    <p>
+      Here is the documentation for Linux-PAM. As you will see it is
+      currently not complete.
+    <p>
+    <ul>
+      <li> <a href="Linux-PAM_SAG.html">The System Administrators' Guide</a>
+      <li> <a href="Linux-PAM_MWG.html">The Module Writers' Guide</a>
+      <li> <a href="Linux-PAM_ADG.html">The Application Developers' Guide</a>
+    </ul>
+    <hr>
+  </body>
+</html>
