@@ -3,6 +3,8 @@
 	* doc/man/pam_fail_delay.3.xml: Fix some Bugs and enhance
 	rationale about when this function should be used and when not.
 
+	* doc/index.html: Cleanup to look prettier.
+
 2006-08-01  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* libpam/Makefile.am: Bump patchlevel of libpam.
